Добавил обработку ошибок

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dal\Dal.csproj" />
+    <ProjectReference Include="..\Dal\DAL.csproj" />
   </ItemGroup>
 
 </Project>
